--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.visentin</groupId>
-    <artifactId>S</artifactId>
+    <artifactId>Sudoku</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>S</name>
+    <name>Sudoku</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -77,7 +77,19 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.visentin.s/com.visentin.s.Main</mainClass>
+                    <mainClass>com.visentin.sudoku.Main</mainClass>
+                </configuration>
+            </plugin>
+
+            <!-- Maven Surefire plugin for JUnit 5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
